--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Evolution API Configuration
-VITE_EVOLUTION_API_URL=https://api.evolution.com.br
+VITE_EVOLUTION_API_URL=https://evolution.g116lp.easypanel.host
 VITE_EVOLUTION_API_KEY=FFFFDCD5ACCAB4FDBB997191E2C7D
 
 # Supabase Configuration
